--- a/components/Contact.module.css
+++ b/components/Contact.module.css
@@ -36,6 +36,17 @@
   scale: -1 1;
 }
 
+.contactInfo {
+  display: flex;
+  justify-content: center;
+  color: var(--main);
+  font-family: var(--vt323);
+  font-size: 1.8rem;
+  gap: 50px;
+  margin-top: 30px;
+  text-shadow: 0 0 10px var(--main), 0 0 5px var(--main);
+}
+
 @media (max-width: 600px) {
   .container {
     padding-inline: 15px;
