--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -1,7 +1,7 @@
 .section {
   background-color: #021133;
   padding-inline: 40px;
-  padding-top: 20px;
+  padding-top: 50px;
   max-width: 1700px;
   margin: auto;
 }
@@ -13,6 +13,7 @@
 .nav_container {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   gap: 35px;
 }
 
@@ -20,7 +21,15 @@
   justify-content: center;
 }
 
-.nav_container a {
+.locale {
+  margin-right: 20px;
+  box-shadow: 0 0 10px var(--main);
+  padding: 5px 15px;
+  border-radius: 5px;
+}
+
+.nav_container a,
+.navIconContainer a {
   text-decoration: none;
   color: var(--main);
   font-family: var(--vt323);
@@ -29,8 +38,22 @@
   transition: all 0.1s;
 }
 
-.nav_container a:hover {
+.nav_container a:hover,
+.navIconContainer a:hover {
   text-shadow: 0 0 10px var(--main);
+}
+
+.navIconContainer {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  width: fit-content;
+  margin-left: auto;
+  margin-bottom: -20px;
+}
+
+.navIconContainer a {
+  display: none;
 }
 
 .icon {
@@ -38,8 +61,6 @@
   position: relative;
   width: 60px;
   height: 40px;
-  margin-left: auto;
-  margin-bottom: -20px;
 }
 
 .icon .top,
@@ -143,6 +164,10 @@
   }
 
   .icon {
+    display: block;
+  }
+
+  .navIconContainer a {
     display: block;
   }
 }
