--- a/components/GraphicalDesign.module.css
+++ b/components/GraphicalDesign.module.css
@@ -17,6 +17,8 @@
   font-size: 1.4rem;
   margin-bottom: 20px;
   padding-left: 20px;
+  width: fit-content;
+  margin-inline: auto;
 }
 
 .section ol li:not(:last-child),
