--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -34,7 +34,7 @@
   color: var(--main);
   font-family: var(--vt323);
   text-shadow: 0 0 15px var(--main), 0 0 10px var(--main);
-  font-size: 2.2rem;
+  font-size: 2rem;
   transition: all 0.1s;
 }
 
@@ -119,6 +119,7 @@
   right: 25px;
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
   width: max-content;
   gap: 20px;
 }
@@ -157,6 +158,7 @@
 @media (max-width: 860px) {
   .section {
     padding-inline: 20px;
+    padding-top: 20px;
   }
 
   .nav_container {
