--- a/components/PointsOfInterest.module.css
+++ b/components/PointsOfInterest.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   gap: 190px;
-  margin-top: -100px;
+  margin-top: 7rem;
   margin-bottom: 200px;
 }
 
@@ -14,19 +14,20 @@
 
 .glow_container {
   position: relative;
-  width: 330px;
-  padding-top: 10px;
+  width: 21rem;
+  text-align: center;
 }
 
 .image {
   margin-left: 50%;
   translate: -50%;
-  width: 115%;
+  width: 100%;
   height: auto;
+  scale: -1 1;
 }
 
 .image.left {
-  margin-top: -35px;
+  margin-top: -3rem;
 }
 
 .button {
@@ -49,7 +50,7 @@
   text-shadow: 0 0 10px var(--main);
 }
 
-.glow_container > a {
+.glow_container a {
   display: none;
 }
 
@@ -73,7 +74,7 @@
     width: 100%;
   }
 
-  .glow_container > p {
+  .glow_container p {
     margin-bottom: 20px !important;
   }
 
@@ -85,7 +86,7 @@
     display: none;
   }
 
-  .glow_container > a {
+  .glow_container a {
     display: block;
   }
 
