--- a/components/utils/WebCard.module.css
+++ b/components/utils/WebCard.module.css
@@ -13,6 +13,12 @@
   padding-left: 0;
   padding-right: 10px;
   margin: auto;
+  text-align: center;
+  position: relative;
+  padding-bottom: 0.5rem;
+  background: var(--main);
+  border-radius: 3rem;
+  box-shadow: 0 0 40px var(--main);
 }
 
 .container img {
