--- a/components/GraphicalDesign.module.css
+++ b/components/GraphicalDesign.module.css
@@ -57,6 +57,11 @@
   right: 0;
   translate: 60% 60%;
   width: 200px;
+}
+
+.paint_can img {
+  display: block;
+  width: 100%;
   height: auto;
 }
 
@@ -66,6 +71,12 @@
   left: 0;
   translate: -50% -50%;
   width: 230px;
+  height: auto;
+}
+
+.palette img {
+  display: block;
+  width: 100%;
   height: auto;
 }
 
