--- a/components/Automations.module.css
+++ b/components/Automations.module.css
@@ -53,6 +53,13 @@
     padding-inline: 1rem;
   }
 
+  .highlight {
+    width: 100%;
+    border: none;
+    box-shadow: none;
+    padding: 0;
+  }
+
   .buttonWrapper {
     flex-direction: column;
     gap: 1rem;
